--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Assuit ICPC/Sheet 01/.cph
 Assuit ICPC/Sheet 01/A_Say_Hello_With_C.cpp
 Assuit ICPC/Sheet 01/output/C_Simple_Calculator.exe
+/Assuit ICPC/Sheet 01/output
