--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Assuit ICPC/Sheet 01/output/C_Simple_Calculator.exe
 /Assuit ICPC/Sheet 01/output
 /Assuit ICPC/Sheet 02/.cph
 /Assuit ICPC/Sheet 02/output
+/Assuit ICPC/Sheet 02
