--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Assuit ICPC/Sheet 01/output/C_Simple_Calculator.exe
 /Assuit ICPC/Sheet 01/output
 /Assuit ICPC/Sheet 02/.cph
 /Assuit ICPC/Sheet 02/output
+Assuit ICPC/Sheet \#1(Data Types)/.cph/.A_Say_Hello_With_C.cpp_fbf625c1af6760a621091b31131745e7.prob
+/Assuit ICPC/Sheet \#3 (Arrays)/.cph
+/Assuit ICPC/Sheet \#3 (Arrays)/output
